# poise

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md
application/: Cargo.toml
application/src/: account_monitor.rs  account_monitor_store.rs  account_read_model.rs  debug_query_service.rs  diagnostics.rs  lib.rs  mutation_executor.rs  notifications.rs  query_service.rs  read_model.rs  runtime_lifecycle_service.rs  runtime_read_state_loader.rs  session_effect_queue.rs  submit_effect_service.rs  track_command_service.rs  track_control_state.rs  track_definition.rs  track_diagnostic_event_loader.rs  track_effect_service.rs  track_effect_store.rs  track_mutation_store.rs  track_observation_service.rs  track_persistence.rs  track_query_store.rs  track_read_services.rs  track_read_source.rs  track_read_source_loader.rs
engine/: Cargo.toml
engine/src/: command.rs  execution_gate.rs  execution_plan.rs  executor.rs  grid.rs  instance.rs  key.rs  ledger.rs  lib.rs  loss_guard.rs  manager.rs  mutation_frame.rs  observation.rs  persisted_runtime.rs  ports.rs  price_gate.rs  reconciler.rs  risk_exposure_gate.rs  runtime.rs  snapshot.rs  track.rs  transition.rs
engine/src/executor/: binding.rs  boundary.rs  ledger.rs  mod.rs  planning.rs  policy.rs  rebalance_trigger.rs  recording.rs  recovery.rs  round_policy.rs  slots.rs
exchanges/binance/: Cargo.toml
exchanges/binance/src/: adapter.rs  config.rs  connected.rs  lib.rs  mapper.rs  rest.rs  startup_control.rs  types.rs  websocket.rs
exchanges/binance/tests/: public_api.rs
exchanges/bybit/: Cargo.toml
exchanges/bybit/src/: config.rs  connected.rs  lib.rs  mapper.rs  protocol.rs  startup_control.rs
exchanges/hyperliquid/: Cargo.toml
exchanges/hyperliquid/src/: client_order_id.rs  config.rs  connected.rs  lib.rs  mapper.rs  rules.rs  signing.rs  startup_control.rs
exchanges/okx/: Cargo.toml
exchanges/okx/src/: config.rs  connected.rs  lib.rs  mapper.rs  startup_control.rs
server/: Cargo.toml
server/src/: account_monitor.rs  account_monitor_store.rs  account_projector.rs  application.rs  assembly.rs  config.rs  debug_query_service.rs  effect_service.rs  effect_worker.rs  event_presentation.rs  exchange.rs  exchange_freshness.rs  exchange_startup.rs  http.rs  instance_dir.rs  main.rs  notifications.rs  order_outcome.rs  projector.rs  query_service.rs  read_model.rs  runtime.rs  server_context.rs  startup_preparation.rs  state_bootstrap.rs  submit_coordinator.rs  submit_preflight.rs  test_support.rs  websocket.rs  write_service.rs
server/src/effect_worker/: dispatch.rs  execute.rs  mod.rs  retry.rs  tests.rs
server/src/runtime/: account_refresh.rs  diagnostics.rs  exchange_state.rs  guards.rs  market_data.rs  market_data_health.rs  mod.rs  reconcile.rs  startup_bootstrap.rs  startup_sync.rs  submit_preflight.rs  tests.rs  user_data.rs
server/tests/: naming_guard.rs  startup_preparation.rs
service/: Cargo.toml  README.md
service/src/: application.rs  background.rs  config.rs  control_plane.rs  execution.rs  kernel.rs  lib.rs  main.rs  protocol.rs  registry.rs  replay.rs  risk.rs  startup.rs  storage.rs  strategy.rs
service/src/integrations/: binance.rs
service/tests/: binance_integration.rs  cli.rs  control_plane.rs  execution_adapter.rs  fake_transport_chain.rs  kernel_flow.rs  mainnet_bootstrap.rs  multi_instance_control_plane.rs  paper_execution.rs  persistence_recovery.rs  replay_runner.rs
service/tests/fixtures/: replay_buy_then_flatten.json
service/tests/support/: runtime_seed.rs
storage/: Cargo.toml
storage/src/: lib.rs  schema.rs  sqlite.rs
tools/shape-family-sim/: README.md  pyproject.toml
tools/shape-family-sim/tests/: test_cli.py  test_simulator.py
tools/track-tuning-workbench/src-tauri/: Cargo.toml  tauri.conf.json
tui/: Cargo.toml  README.md
tui/src/: api_client.rs  app.rs  effects.rs  events.rs  exposure_presentation.rs  input.rs  lib.rs  locale.rs  main.rs  protocol.rs  render.rs  runtime.rs  selectors.rs  signal.rs  state.rs  store.rs  theme.rs  timestamp_display.rs
tui/src/input/: mod.rs
tui/src/snapshots/: grid_platform_tui__render__tests__dashboard_render_snapshot_100x16.snap  grid_platform_tui__render__tests__dashboard_render_snapshot_120x18.snap  grid_platform_tui__render__tests__dashboard_render_snapshot_80x24.snap  grid_platform_tui__render__tests__dashboard_render_snapshot_degraded_100x16.snap  grid_platform_tui__render__tests__dashboard_render_snapshot_execution_links_100x16.snap  grid_platform_tui__render__tests__dashboard_render_snapshot_waiting_first_snapshot_100x16.snap  grid_platform_tui__render__tests__dashboard_render_snapshot_waiting_first_snapshot_zh_cn_100x16.snap  grid_platform_tui__render__tests__dashboard_render_snapshot_zh_cn_100x16.snap  grid_platform_tui__render__tests__dashboard_render_snapshot_zh_cn_80x24.snap  grid_platform_tui__render__tests__events_render_snapshot_100x16.snap  grid_platform_tui__render__tests__events_render_snapshot_120x18.snap  grid_platform_tui__render__tests__events_render_snapshot_80x24.snap  grid_platform_tui__render__tests__events_render_snapshot_failure_details_100x16.snap  grid_platform_tui__render__tests__events_render_snapshot_reconnecting_80x24.snap  grid_platform_tui__render__tests__grid_render_snapshot_100x16.snap  grid_platform_tui__render__tests__grid_render_snapshot_120x18.snap  grid_platform_tui__render__tests__grid_render_snapshot_80x24.snap  grid_platform_tui__render__tests__grid_render_snapshot_zh_cn_100x16.snap  grid_platform_tui__render__tests__grid_render_snapshot_zh_cn_80x24.snap  grid_platform_tui__render__tests__help_render_snapshot_waiting_first_snapshot_100x16.snap  grid_platform_tui__render__tests__help_render_snapshot_waiting_first_snapshot_zh_cn_100x16.snap  grid_platform_tui__render__tests__market_render_snapshot_100x16.snap  grid_platform_tui__render__tests__market_render_snapshot_reconnecting_100x16.snap  (+2 more)
tui/src/theme/: mod.rs
tui/tests/: instance_switching.rs  language_consistency.rs  local_paper_e2e.rs  naming_guard.rs  protocol_contract.rs
(+297 files in other folders)
