[package]
name = "poise-application"
version.workspace = true
edition.workspace = true

[features]
server-test-support = ["poise-engine/test-support"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
poise-core = { path = "../core" }
poise-engine = { path = "../engine" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
poise-engine = { path = "../engine", features = ["test-support"] }
serde_json.workspace = true
