[package]
name = "poise-engine"
version.workspace = true
edition.workspace = true

[dependencies]
poise-core = { path = "../core" }
serde.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
