[package]
name = "poise-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
poise-binance = { path = "../exchanges/binance" }
poise-core = { path = "../core" }
poise-engine = { path = "../engine" }
poise-protocol = { path = "../protocol" }
poise-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml_edit.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tower.workspace = true
