[package]
name = "poise-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
poise-application = { path = "../application" }
poise-binance = { path = "../exchanges/binance" }
poise-bybit = { path = "../exchanges/bybit" }
poise-core = { path = "../core" }
poise-engine = { path = "../engine" }
poise-protocol = { path = "../protocol" }
poise-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml_edit.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
futures-util.workspace = true
poise-application = { path = "../application", features = ["server-test-support"] }
reqwest.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
