[package]
name = "grid-platform-service"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.1", features = ["json", "macros", "ws"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
futures-util.workspace = true
http-body-util = "0.1.3"
reqwest.workspace = true
tokio-tungstenite.workspace = true
tower = { version = "0.5.2", features = ["util"] }
