[package]
name = "grid-platform-service"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
axum = { version = "0.8.1", features = ["json", "macros", "ws"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
futures-util.workspace = true
reqwest.workspace = true
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile.workspace = true
tower = { version = "0.5.2", features = ["util"] }
