[package]
name = "grid-storage"
version.workspace = true
edition.workspace = true

[dependencies]
grid-engine = { path = "../engine" }
grid-core = { path = "../core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
