[package]
name = "poise-storage"
version.workspace = true
edition.workspace = true

[dependencies]
poise-engine = { path = "../engine" }
poise-core = { path = "../core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
