[package]
name = "grid-platform-tui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dotenvy = "0.15.7"
futures-util.workspace = true
ratatui = "0.29.0"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.4"

[dev-dependencies]
insta = "1.42.2"
tempfile.workspace = true
