[package]
name = "poise-tui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures-util.workspace = true
poise-protocol = { path = "../protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
