[package]
name = "poise-hyperliquid"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }
poise-core = { path = "../../core" }
poise-engine = { path = "../../engine" }
rmp-serde = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3 = "0.10"
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
