[package]
name = "poise-okx"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
poise-core = { path = "../../core" }
poise-engine = { path = "../../engine" }
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
