[project]
name = "shape-family-sim"
version = "0.1.0"
description = "Shape family simulation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
shape-family-sim = "shape_family_sim:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
