[package]
name = "poise-track-tuning-workbench"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
poise-core = { path = "../../../core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = { version = "2.7.0", default-features = false }
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
